Preventing page clipping for non-profit organizations

--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -12,6 +12,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
+    height: 50px;
   }
 
   .nav-links a {
